2017-01-16 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am: removing the _configs.sed file generated
    by configure in distclean target rule fulfills now
    entirely the 'distcheck' target
    
2017-01-04 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am,src/Makefile.am: now handling the 'dist'
    and 'distcheck' targets of the automake generated
    Makefile
    * configure.ac: add RIVET_CORE definition
    * src/mod_rivet_ng/rivetCore.c: now calls
    the alternate form of RivetParse
    * src/parser/parserPkgInit.c: altenate form of
    function Rivet_Parser elimianates the need of
    enclosing the code in the namespace ::request

2016-12-19 Massimo Manghi <mxmanghi@apache.org>
    * rivet/mod_rivet_ng/mod_rivet_cache.c: better wording of cache 
    functions names. 

2016-12-12 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: [url_script] now evaluated
    explicitly in the ::request name space. We
    don't need the Rivet parser to place a script
    in this namespace
    * rivet/mod_rivet_ng/rivetCore.c: now Rivet_GetRivetFile
    is called with the flag 'toplevel' set to zero. The
    code handling this flag could be removed if we 
    abandoned the traditional mod_rivet core

2016-12-07 Massimo Manghi <mxmanghi@apache.org>
    * src/librivet/rivetWWW.c: enlarging buffer 
    allocated in ::rivet::escape_sgml_chars
    * configure.ac: removed test on the apache
    version (we don't support apache-1 anymore)
    
2016-12-06 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: mod_rivet_ng now default for
    builing mod_rivet
    * src/mod_rivet_ng/rivetCore.c: safer condition
    testing should avoid assumptions about how
    the compiler builds pointer comparisons
    * src/mod_rivet_ng/worker_prefork_common.c: 
    before running the child init script the
    running configuration pointer is the thread
    private data has to be set
    * tests/broken.test: new error message structure