@@ -16,7 +16,7 @@
 
 #SUBDIRS = @rivet_core@
 
-lib_libexecdir = @RIVET_TCL_TARGET@
+lib_libexecdir = $(DESTDIR)@RIVET_TCL_TARGET@
 lib_libexec_LTLIBRARIES = librivetparser.la librivetlib.la 
 
 #
@@ -68,7 +68,7 @@ mod_rivet_la_LDFLAGS = @TCL_LIB_SPEC@ @APXS_LDFLAGS@ @APR_LDFLAGS@ -module -avoi
 mod_rivet_la_LIBADD = @TCL_LIBS@ @APXS_LIBS@ 
 mod_rivet_la_CPPFLAGS = -I$(srcdir) -I$(srcdir)/@rivet_core@ -I$(srcdir)/@rivet_channel@ -I$(srcdir)/parser -I$(srcdir)/@apache_request@ @apache_include@ -I. @TCL_INCLUDES@ @APXS_CPPFLAGS@ @APXS_INCLUDES@ @APR_CPPFLAGS@ @APR_INCLUDES@ @APU_INCLUDES@ -DSTART_TAG='"<?"' -DEND_TAG='"?>"'
 
-lib_libmpmdir = @RIVET_TCL_TARGET@/mpm
+lib_libmpmdir = $(DESTDIR)@RIVET_TCL_TARGET@/mpm
 lib_libmpm_LTLIBRARIES = rivet_worker_mpm.la rivet_prefork_mpm.la rivet_lazy_mpm.la
 
 rivet_worker_mpm_la_SOURCES = @rivet_core@/rivet_worker_mpm.c @rivet_core@/worker_prefork_common.c
@@ -99,4 +99,4 @@ uninstall:
 	rm -f $(DESTDIR)$(lib_libmpmdir)/*.so
 	rm -f $(DESTDIR)$(lib_libexecdir)/*.so
 	rm -f $(DESTDIR)$(apxs_libexecdir)/mod_rivet.so
-    
+
